<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">APO - Delta Zeta</string>
    <string name="app_global_storage_key">APO-DZ</string>
    <string name="no_internet_toast_msg">Oops(ilon), there\'s no internet! Try again later.</string>
    <string name="btn_reload">Reload</string>

    <!-- Menu Options -->
    <string name="action_settings">Settings</string>
    <string name="menu_switch_user">Sign out</string>
    <string name="menu_report_bug">Send feedback</string>
    <string name="menu_about_app">About</string>
    <string name="menu_rate_app">Rate app</string>
    <string name="menu_report_bug_url">@string/app_suggestion_box</string>
    <string name="menu_about_app_url">@string/app_about</string>
    <string name="menu_add_contact">Add/edit contact</string>
    <string name="menu_switch_mode">Switch mode</string>
    <string name="menu_directory_show_alumni">Alum</string>
    <string name="menu_directory_show_students">Students</string>
    <string name="menu_directory_update_form">Update your info</string>

    <!-- Title Screen -->
    <string name="login_screen_title"><b>DELTA ZETA CHAPTER</b></string>
    <string name="logo_description">Alpha Phi Omega</string>
    <string name="welcome_message">Welcome, Brother.</string>
    <string name="login_status_logged_out">Please log in to continue.</string>
    <string name="login_status_logged_in">Logged in as </string>
    <string name="login_status_logged_in_alum">Logged in alumni mode.</string>
    <string name="login_button">Defend the Portal</string>
    <string name="logout_button">Logout</string>

    <!-- Name Entry Dialog -->
    <string name="name_entry_title">Who comes there?</string>
    <string name="name_entry_instructions">Enter your name exactly as it appears on the Spreadsheet.</string>
    <string name="name_entry_first_name_prompt">First Name</string>
    <string name="name_entry_first_name_hint">Greatest</string>
    <string name="name_entry_last_name_prompt">Last Name</string>
    <string name="name_entry_last_name_hint">Ever</string>
    <string name="dialog_enter_password_msg">Please enter the chapter app password to continue.</string>

    <!-- Brother Mode Tab Names -->
    <string name="title_section1">My Status</string>
    <string name="title_section2">Calendar</string>
    <string name="title_section3">Brothers</string>
    <string name="title_section4">Pledges</string>
    <string name="title_section5">Helpful Links</string>

    <!-- Work in Progress Labels -->
    <string name="under_construction_header">Under Construction</string>
    <string name="under_construction_message">You have reached a section currently undergoing work.</string>

    <!-- Brother Status -->
    <!-- Brother Status Headers -->
    <string name="service_header">Service</string>
    <string name="membership_header">Membership</string>
    <string name="fellowship_header">Fellowship</string>
    <string name="dialog_user_not_found_title">Status not found</string>
    <string name="dialog_user_not_found_msg">We were unable to find your APO record. Please sign out and log back in with your name exactly as it appears on the Spreadsheet.</string>
    <string name="label_no_user_status">Unable to find user status.</string>

    <!-- Categories -->
    <string name="cat_status">Status</string>
    <string name="cat_req_completion">Reqs</string>
    <string name="cat_service_hours">Hours</string>
    <string name="cat_large_group_completion">Large Group</string>
    <string name="cat_publicity_completion">Publicity</string>
    <string name="cat_hosting_completion">Hosting</string>
    <string name="cat_points">Points</string>
    <string name="cat_meetings">Meetings This Month</string>
    <string name="cat_pledge_comp">Pledge Comp.</string>
    <string name="cat_bro_comp">Brother Comp.</string>

    <!-- Completion Statuses -->
    <string name="req_complete">complete</string>
    <string name="req_incomplete">incomplete</string>
    <string name="req_loading">Loading…</string>
    <string name="btn_bro_status_show_details">Show details</string>

    <!-- Directories -->
    <string name="directory_item_icon">Brother Info</string>
    <!-- Directory Details -->
    <string name="email">e-mail</string>
    <string name="phone">phone</string>
    <string name="major">major</string>
    <string name="minor">minor</string>
    <string name="btn_text_content_desc">send text</string>
    <string name="btn_dz_shoutout">Send a DZ Shoutout!</string>

    <!-- Helpful Links -->
    <!-- Headers for Helpful Links -->
    <string name="sheet_list_header">Spreadsheets</string>
    <string name="form_list_header">Forms</string>
    <string name="site_list_header">Websites</string>
    <string name="social_list_header">Social Media</string>
    <string name="app_list_header">The App</string>
    <string name="link_header_flag">LINK_HEADER</string>

    <!-- App Section Titles -->
    <string name="links_app_title_about">about</string>
    <string name="links_app_title_play_link">view on google play</string>
    <string name="links_app_title_repo">source on gitHub</string>
    <string name="links_app_title_g_plus">apo-dz beta</string>
    <string name="links_app_title_beta_link">opt in/out of app beta</string>
    <string name="links_app_title_suggestion_box">suggest feature/report bug</string>

    <!-- App Section Descriptions -->
    <string name="links_app_descr_about">because even apps have origin stories</string>
    <string name="links_app_descr_play_link"><i>if you like it then you shoulda put some stars on it</i></string>
    <string name="links_app_descr_repo">you c0d3? get involved with the project!</string>
    <string name="links_app_descr_g_plus">google+ community for beta channel</string>
    <string name="links_app_descr_beta_link">google+ membership required</string>
    <string name="links_app_descr_suggestion_box">all feedback is welcome. no flames though</string>

    <!-- Actual Links -->
    <string name="sites_national_homepage">http://apo.org/</string>
    <string name="sites_national_resources">http://www.apo.org/SiteResources</string>
    <string name="sites_section_92">http://www.apor2.org/sections/section-92</string>
    <string name="sites_chapter_homepage">http://upennapo.org/</string>
    <string name="sites_old_service_forum">http://pennapo.forumotion.net/</string>
    <string name="sites_national_alum_res">http://www.apo.org/memberinfo/alumni/resources</string>
    <string name="sites_national_soc_of_life">http://www.apo.org/give/societyoflifemembers</string>
    <string name="sites_national_1925_club">http://www.apo.org/give/1925club</string>
    <string name="social_chapter_youtube">http://www.youtube.com/user/DZHistorian</string>
    <string name="social_chapter_instagram">http://instagram.com/upennapo</string>
    <string name="social_chapter_tumblr">http://upennapo.tumblr.com/</string>
    <string name="social_apoutofcontext">http://apoutofcontext.tumblr.com/</string>
    <string name="social_chapter_linkedin">http://www.linkedin.com/groups?home=&amp;trk=&amp;gid=4491214</string>
    <string name="social_fb_national_page">https://www.facebook.com/AlphaPhiOmega.USA</string>
    <string name="social_fb_national_alum_page">https://www.facebook.com/APOAlumni</string>
    <string name="social_fb_region_II">https://www.facebook.com/groups/2226737587/</string>
    <string name="social_fb_section_92">https://www.facebook.com/groups/2217167569/</string>
    <string name="social_fb_active_group">https://www.facebook.com/groups/apodz1/</string>
    <string name="social_fb_alum_group">https://www.facebook.com/groups/apodzalumni/</string>
    <string name="social_fb_alum_group_phl">https://www.facebook.com/groups/144765955661778/</string>
    <string name="social_fb_alum_group_nyc">https://www.facebook.com/groups/399467616784608/</string>
    <string name="app_about">http://ronaldsmartin.github.io/APO-DZ-Android/</string>
    <string name="app_google_play">https://play.google.com/store/apps/details?id=org.upennapo.app</string>
    <string name="app_google_plus">https://plus.google.com/communities/114564304317252202845</string>
    <string name="app_beta_invite">https://play.google.com/apps/testing/org.upennapo.app</string>
    <string name="app_suggestion_box">https://docs.google.com/forms/d/1TvicaFVBNcVgoZbTqXt3YvzY_ds2L0qHhz2LDpi6wDQ/viewform</string>
    <string name="app_github_source">https://github.com/ronaldsmartin/APO-DZ-Android</string>

    <!-- ...Other -->
    <string name="apo_2048_url">http://games.usvsth3m.com/2048/apo-dz-edition/</string>
    <string name="apo_2048_label">DZ 2048</string>
    <string name="apo_2048_unlock_msg">You\'ve unlocked an easter egg! Click the joypad to play.</string>

    <!-- Alumni Mode -->
    <!-- I henceforth declare that 'am' will signify alumni mode -->
    <string name="title_activity_alumni_mode">Alumni Mode</string>
    <string name="title_am_section1">Directory</string>
    <string name="title_am_section2">@string/title_section2</string>
    <string name="title_am_section3">Resources</string>
    <string name="title_am_section4">@string/apo_2048_label</string>

    <!-- AlumDirectory quick-return directory toggle bar -->
    <string name="alumni">Alumni</string>
    <string name="students">Students</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
