<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_play_2048"
        android:icon="@drawable/ic_action_joypad"
        android:orderInCategory="105"
        android:showAsAction="ifRoom|withText"
        android:title="@string/apo_2048_label"
        android:visible="false" />

    <item
        android:id="@+id/menu_about_app"
        android:icon="@drawable/ic_action_github"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/menu_about_app" />

    <item
        android:id="@+id/menu_switch_mode"
        android:icon="@drawable/ic_action_turn_right"
        android:orderInCategory="115"
        android:showAsAction="never"
        android:title="@string/menu_switch_mode" />

    <item
        android:id="@+id/menu_switch_user"
        android:icon="@drawable/ic_action_exit"
        android:orderInCategory="140"
        android:showAsAction="never"
        android:title="@string/menu_switch_user" />

</menu>
