<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <!-- Header -->
    <TextView android:id="@+id/brother_status_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:gravity="center" 
        android:background="@android:color/black"
        android:fontFamily="sans-serif-condensed"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/apo_yellow"    
        android:text="@string/brother_status_header"
        style="@android:style/TextAppearance.Large"  />
    
    <!-- Content -->
	<ScrollView
	    android:id="@+id/status_scrollview"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	    
	 	<LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingLeft="16dip"
	      	android:paddingRight="16dip"
	        android:orientation="vertical"
	        android:gravity="center"
	        android:fontFamily="sans-serif-light" >
	        
		<!-- Name -->
		    <TextView
		        android:id="@+id/name_label"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/brother_status_header"
		        style="?android:attr/listSeparatorTextViewStyle" />
		 	
		
		    <!-- Status -->
			<LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:padding="10dip"
			    android:orientation="horizontal" >
				<TextView
	                android:layout_gravity="left"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:fontFamily="sans-serif-light"
	                style="@android:style/TextAppearance.Medium"
	                android:text="@string/cat_status" />
				
				<TextView android:id="@+id/status"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="right"
		                android:fontFamily="sans-serif-light"
		                android:textAllCaps="true"/>
			</LinearLayout>
			
			<LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:padding="10dip"
			    android:orientation="horizontal" >
				<TextView
	                android:layout_gravity="left"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:fontFamily="sans-serif-light"
	                style="@android:style/TextAppearance.Medium"
	                android:text="@string/cat_req_completion" />
				
				<TextView android:id="@+id/all_reqs_status"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="right"
		                android:fontFamily="sans-serif-light"
		                android:textAllCaps="true"
		                android:text="@string/req_incomplete" />
			</LinearLayout>
	
	    <!-- Service -->
        <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/service_header"
	        style="?android:attr/listSeparatorTextViewStyle" />
	        
	        <LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:padding="10dip"
			    android:orientation="horizontal" >
				<TextView
	                android:layout_gravity="left"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:fontFamily="sans-serif-light"
	                style="@android:style/TextAppearance.Medium"
	                android:text="@string/cat_req_completion" />
				
				<TextView android:id="@+id/service_status"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="right"
		                android:textAllCaps="true"
		                android:fontFamily="sans-serif-light"
		                android:text="@string/req_incomplete" />
			</LinearLayout>
			
	        <LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:padding="10dip"
			    android:orientation="horizontal" >
				<TextView
	                android:layout_gravity="left"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:fontFamily="sans-serif-light"
	                style="@android:style/TextAppearance.Medium"
	                android:text="@string/cat_service_hours" />
				
				<TextView android:id="@+id/hours_label"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="right"
		                android:fontFamily="sans-serif-light"
		                android:text="@string/zero_points" />
			</LinearLayout>
			
	        <LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:padding="10dip"
			    android:orientation="horizontal" >
				<TextView
	                android:layout_gravity="left"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:fontFamily="sans-serif-light"
	                style="@android:style/TextAppearance.Medium"
	                android:text="@string/cat_large_group_completion" />
				
				<TextView android:id="@+id/large_group_status"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="right"
		                android:textAllCaps="true"
		                android:fontFamily="sans-serif-light"
		                android:text="@string/req_incomplete" />
			</LinearLayout>
			
	        <LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:padding="10dip"
			    android:orientation="horizontal" >
				<TextView
	                android:layout_gravity="left"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:fontFamily="sans-serif-light"
	                style="@android:style/TextAppearance.Medium"
	                android:text="@string/cat_publicity_completion" />
				
				<TextView android:id="@+id/publicity_status"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="right"
		                android:fontFamily="sans-serif-light"
		                android:textAllCaps="true"
		                android:text="@string/req_incomplete" />
			</LinearLayout>
			
	        <LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:padding="10dip"
			    android:orientation="horizontal" >
				<TextView
	                android:layout_gravity="left"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:fontFamily="sans-serif-light"
	                style="@android:style/TextAppearance.Medium"
	                android:text="@string/cat_hosting_completion" />
				
				<TextView android:id="@+id/service_hosting_status"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="right"
		                android:fontFamily="sans-serif-light"
		                android:textAllCaps="true"
		                android:text="@string/req_incomplete" />
			</LinearLayout>
	        
	    <!-- Membership -->
	        <TextView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/membership_header"
		        style="?android:attr/listSeparatorTextViewStyle" />
	        
	        <LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:padding="10dip"
			    android:orientation="horizontal" >
				<TextView
	                android:layout_gravity="left"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:fontFamily="sans-serif-light"
	                style="@android:style/TextAppearance.Medium"
	                android:text="@string/cat_req_completion" />
				
				<TextView android:id="@+id/membership_status"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="right"
		                android:fontFamily="sans-serif-light"
		                android:textAllCaps="true"
		                android:text="@string/req_incomplete" />
			</LinearLayout>
			
	        <LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:padding="10dip"
			    android:orientation="horizontal" >
				<TextView
	                android:layout_gravity="left"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:fontFamily="sans-serif-light"
	                style="@android:style/TextAppearance.Medium"
	                android:text="@string/cat_points" />
				
				<TextView android:id="@+id/membership_points"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="right"
		                android:fontFamily="sans-serif-light"
		                android:textAllCaps="true"
		                android:text="@string/zero_points" />
			</LinearLayout>
			
	        <LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:padding="10dip"
			    android:orientation="horizontal" >
				<TextView
	                android:layout_gravity="left"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:fontFamily="sans-serif-light"
	                style="@android:style/TextAppearance.Medium"
	                android:text="@string/cat_bro_comp" />
				
				<TextView android:id="@+id/brother_comp"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="right"
		                android:fontFamily="sans-serif-light"
		                android:textAllCaps="true"
		                android:text="@string/req_incomplete" />
			</LinearLayout>
			
	        <LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:padding="10dip"
			    android:orientation="horizontal" >
				<TextView
	                android:layout_gravity="left"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:fontFamily="sans-serif-light"
	                style="@android:style/TextAppearance.Medium"
	                android:text="@string/cat_pledge_comp" />
				
				<TextView android:id="@+id/pledge_comp"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="right"
		                android:fontFamily="sans-serif-light"
		                android:textAllCaps="true"
		                android:text="@string/req_incomplete" />
			</LinearLayout>
			
	        <LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:padding="10dip"
			    android:orientation="horizontal" >
				<TextView
	                android:layout_gravity="left"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:fontFamily="sans-serif-light"
	                style="@android:style/TextAppearance.Medium"
	                android:text="@string/cat_hosting_completion" />
				
				<TextView android:id="@+id/membership_hosting"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="right"
		                android:fontFamily="sans-serif-light"
		                android:textAllCaps="true"
		                android:text="@string/req_incomplete" />
			</LinearLayout>
	        
	    <!-- Fellowship -->
        <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/fellowship_header"
	        style="?android:attr/listSeparatorTextViewStyle" />
	        
        	<LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:padding="10dip"
			    android:orientation="horizontal" >
				<TextView
	                android:layout_gravity="left"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:fontFamily="sans-serif-light"
	                style="@android:style/TextAppearance.Medium"
	                android:text="@string/cat_req_completion" />
				
				<TextView android:id="@+id/fellowship_status"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="right"
		                android:textAllCaps="true"
		                android:fontFamily="sans-serif-light"
		                android:text="@string/req_incomplete" />
			</LinearLayout>
        
	        <LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:padding="10dip"
			    android:orientation="horizontal" >
				<TextView
	                android:layout_gravity="left"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:fontFamily="sans-serif-light"
	                style="@android:style/TextAppearance.Medium"
	                android:text="@string/cat_points" />
				
				<TextView android:id="@+id/fellowship_points"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="right"
		                android:fontFamily="sans-serif-light"
		                android:textAllCaps="true"
		                android:text="@string/zero_points" />
			</LinearLayout>
			
	        <LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:padding="10dip"
			    android:orientation="horizontal" >
				<TextView
	                android:layout_gravity="left"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:fontFamily="sans-serif-light"
	                style="@android:style/TextAppearance.Medium"
	                android:text="@string/cat_hosting_completion" />
				
				<TextView android:id="@+id/fellowship_hosting"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="right"
		                android:fontFamily="sans-serif-light"
		                android:textAllCaps="true"
		                android:text="@string/req_incomplete" />
			</LinearLayout>
	    </LinearLayout>
	</ScrollView>
</LinearLayout>